--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.2",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
-    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
